# PedSilicoICH

./: .gitignore  CT_dataset_pipeline.py  MIDA_head_CT.py  README.rst  pyproject.toml  test_XCIST.py
notebooks/: IQ_evaluations.ipynb  MRI_brain_atlas_groundtruth.ipynb  basic_eda.ipynb  ct_head_simulations.ipynb  patient_demographics.ipynb  requirements.txt  utils.py  viewing_simulation_results.ipynb
src/pedsilicoICH/: __init__.py  artifact_generation.py  image_acquisition.py  image_reconstruction.py  lesion_definition.py  lesion_insertion.py  model_assessment.py
src/pedsilicoICH/ground_truth_definition/: __init__.py  dicom_to_voxelized_phantom.py  phantoms.py
